Add SDK snapshots & work-projection residue
Add first-class SDK snapshot models and execution options, and refactor compatibility projection handling into compact residue records.

- New SDK API models: TaskAccessSnapshot, TaskDetailSnapshot, TaskExecutionOptions, TaskShellSnapshot, TaskStateSnapshot, TaskSummarySnapshot, WorkerContextSnapshot, WorkerSnapshot and related classes; MassTaskShellCreateRequest now uses a String contract and TaskExecutionOptions.
- TaskResultService renamed internal refs from messageState to workSummary, produces WorkSummaryResidue/WorkAttemptResidue and persists them via TaskCompatibilityProjectionStore; added conversion helpers.
- TaskCompatibilityProjectionStore updated to accept residue records and include WorkSummaryResidue/WorkAttemptResidue record types.
- TaskManager tests and logic updated: allow creating BATCH tasks with missing initial inputs (sealed empty shell); removed oversized-inline input checks and MAX_INITIAL_INLINE_INPUTS usage where applicable.
- Documentation (AGENTS.md, READMEs, baseline docs) updated to clarify kernel truth split: Task.contract, Task.intakeStatus, TaskWorkRuntime.
- Misc: small test, controller, and build/checkstyle additions and adjustments.